[tool.poetry]
name = "fabric-helper"
version = "0.1.0"
description = ""
authors = ["Violet Eldridge <github@violet-mica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = {git = "org-14957082@github.com:openai/openai-python.git"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
